force-app/main/default/objects/Purchased_Property__c/Purchased_Property__c.object-meta.xml
<CustomObject>
    <label>Purchased Property</label>
    <nameField>
        <label>Purchased Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchased Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>