force-app/main/default/objects/Purchased_Property__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchased Properties</relationshipLabel>
    <relationshipName>Purchased_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>