force-app/main/default/objects/Purchased_Property__c/fields/Commission_Status__c.field-meta.xml
<CustomField>
    <fullName>Commission_Status__c</fullName>
    <label>Commission Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>