force-app/main/default/objects/Purchased_Property__c/fields/First_Party_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Party_Source_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Party Source Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchased Properties (First Party Source Name)</relationshipLabel>
    <relationshipName>Purchased_Properties5</relationshipName>
    <type>Lookup</type>
</CustomField>