force-app/main/default/objects/Purchased_Property__c/fields/Gross_Commission__c.field-meta.xml
<CustomField>
    <fullName>Gross_Commission__c</fullName>
    <label>Gross Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>