force-app/main/default/objects/Purchased_Property__c/fields/Passout_Commission__c.field-meta.xml
<CustomField>
    <fullName>Passout_Commission__c</fullName>
    <label>Passout Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>