force-app/main/default/objects/Purchased_Property__c/fields/Primary_Assign_Commision__c.field-meta.xml
<CustomField>
    <fullName>Primary_Assign_Commision__c</fullName>
    <label>Primary Assign Commission</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>