force-app/main/default/objects/Purchased_Property__c/fields/Primary_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Primary_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchased Properties (Staff)</relationshipLabel>
    <relationshipName>SoldPropertiesByStaff</relationshipName>
    <type>Lookup</type>
</CustomField>