force-app/main/default/objects/Purchased_Property__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Purchased Properties</relationshipLabel>
    <relationshipName>Purchased_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>