force-app/main/default/objects/Purchased_Property__c/fields/Second_Party_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Party_Source_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Party Source Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchased Properties (Second Party Source Name)</relationshipLabel>
    <relationshipName>Purchased_Properties6</relationshipName>
    <type>Lookup</type>
</CustomField>