force-app/main/default/objects/Purchased_Property__c/fields/Secondary_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchased Properties (Secondary Assigned To)</relationshipLabel>
    <relationshipName>Purchased_Properties4</relationshipName>
    <type>Lookup</type>
</CustomField>