force-app/main/default/objects/Purchased_Property__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchased Properties (Seller Name)</relationshipLabel>
    <relationshipName>Purchased_Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>