force-app/main/default/objects/Purchased_Property__c/fields/Source_of_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Buyer__c</fullName>
    <label>Source of Buyer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>