force-app/main/default/objects/Purchased_Property__c/fields/Source_of_Seller__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Seller__c</fullName>
    <label>Source of Seller</label>
    <length>200</length>
    <type>Text</type>
</CustomField>