force-app/main/default/objects/Purchased_Property__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchased Properties (Staff)</relationshipLabel>
    <relationshipName>Purchased_Properties2</relationshipName>
    <type>Lookup</type>
</CustomField>