force-app/main/default/objects/Purchased_Property__c/fields/Total_Commission_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Received__c</fullName>
    <label>Total Commission Received</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>