force-app/main/default/objects/Purchased_Property__c/fields/Total_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Payment Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>