force-app/main/default/objects/Purchased_Property__c/fields/Total_Value_Incl_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Incl_GST__c</fullName>
    <label>Total Value Incl GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>