force-app/main/default/objects/Purchased_Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Buyer__c</columns>
    <columns>Primary_Assigned_To__c</columns>
    <columns>Secondary_Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Gross_Commission__c</columns>
    <columns>Commission_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>