force-app/main/default/objects/Purchased_Property__c/listViews/Staff_Commision.listView-meta.xml
<ListView>
    <fullName>Staff_Commision</fullName>
    <columns>NAME</columns>
    <columns>Primary_Assigned_To__c</columns>
    <columns>Primary_Assign_Commision__c</columns>
    <columns>Secondary_Assigned_To__c</columns>
    <columns>Secondary_Assign_Commision__c</columns>
    <columns>Gross_Commission__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Staff Commision</label>
</ListView>